adding simple mfsync::concurrent::deque

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ add_executable(mdump
   src/file_fetcher.cpp
   src/file_receive_handler.cpp
   src/protocol.cpp
+  src/deque.cpp
   )
 
 target_include_directories(mdump
