--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,21 @@ cmake_minimum_required (VERSION 3.2.2)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_BUILD_TYPE Release)
 
 project("mfsync" CXX)
 
 option(BUILD_TESTS "test will be build" OFF)
 option(BUILD_DOC "build documentation" OFF)
 option(USE_SUBMODULES "built using submodules. this is only needed when building without nix" OFF)
+option(DEBUG "set cmake build type to debug" OFF)
+
+if(DEBUG)
+  set(CMAKE_BUILD_TYPE Debug)
+  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -U_FORTIFY_SOURCE -Wall -Wextra -g -O0")
+endif()
+
+
 
 find_package(Threads REQUIRED)
 find_package(SQLite3 REQUIRED)
@@ -64,9 +72,6 @@ target_compile_options(mfsync
 if(BUILD_TESTS)
   add_subdirectory(test)
 endif()
-
-
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -U_FORTIFY_SOURCE -O0 -Wall -Wextra -g")
 
 if(BUILD_DOC)
   # look for Doxygen package
