--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,20 +2,24 @@ cmake_minimum_required (VERSION 3.2.2)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_BUILD_TYPE Release)
 
 project("mfsync" CXX)
 
 option(BUILD_TESTS "test will be build" OFF)
 option(BUILD_DOC "build documentation" OFF)
 option(USE_SUBMODULES "built using submodules. this is only needed when building without nix" OFF)
-option(DEBUG "set cmake build type to debug" OFF)
 
-if(DEBUG)
-  set(CMAKE_BUILD_TYPE Debug)
-  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -U_FORTIFY_SOURCE -Wall -Wextra -g -O0")
-endif()
+add_compile_options(
+  -Wall
+  -Wextra
+  $<$<CONFIG:DEBUG>:-U_FORTIFY_SOURCE>
+  $<$<CONFIG:DEBUG>:-g>
+  $<$<CONFIG:DEBUG>:-O0>
+  $<$<CONFIG:RELEASE>:-O3>
+  )
 
+message("Build Type: ${CMAKE_BUILD_TYPE}")
+message("Compile Opts: ${COMPILE_OPTIONS}")
 
 
 find_package(Threads REQUIRED)
@@ -47,6 +51,7 @@ add_executable(mfsync
   src/server_session.cpp
   src/client_session.cpp
   src/server.cpp
+  src/progress_handler.cpp
   )
 
 target_include_directories(mfsync
