--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,7 +21,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Install Dependencies
-      run: apt-get install cmake libspdlog-dev openssl libboost-all-dev cmake g++ libssl-dev git -y
+      run: sudo apt-get install cmake libspdlog-dev openssl libboost-all-dev cmake g++ libssl-dev git -y
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
