--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -4,8 +4,14 @@ find_package(Catch2 REQUIRED)
 
 add_executable(first_test test.cpp)
 
+target_include_directories(first_test
+  PRIVATE
+    libmfsync
+)
+
 target_link_libraries(first_test
   PRIVATE
+    libmfsync
     Catch2::Catch2
 )
 
