--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 3.2.2)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 project("mfsync" CXX)
 
@@ -79,7 +80,7 @@ if(USE_SUBMODULES)
   FetchContent_Declare(
     libindicators
     GIT_REPOSITORY https://github.com/p-ranav/indicators
-    GIT_TAG        5050a8887786fe279a7ce47841cc805ef7e88326
+    GIT_TAG        222382c3a6abbce32503792c59826063660ddb56
     GIT_SHALLOW TRUE
     CONFIGURE_COMMAND ""
     BUILD_COMMAND ""
