--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,13 +11,13 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
 
     - name: Install Dependencies
-      run: sudo apt-get install cmake libspdlog-dev openssl libboost-all-dev cmake g++ libssl-dev git -y
+      run: sudo apt-get install cmake libspdlog-dev openssl libboost-all-dev cmake g++-12 build-essential libssl-dev git libcrypto++-dev libcrypto++-utils libcrypto++  -y
 
     - name: Configure CMake
       run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DUSE_SUBMODULES=ON
